<resources>
    <string name="app_name">My Application</string>
    <string name="text_photo">PHOTO</string>
    <string name="text_title">Title</string>
    <string name="text_price">Price</string>
    <string name="text_location">Location</string>
    <string name="text_description">Description</string>
    <string name="text_inventory">Inventory</string>
    <string name="text_weight">Weight</string>
</resources>