<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/editTitle"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:srcCompat="@drawable/camera" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photoLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginBottom="30dp"
        app:layout_constraintVertical_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_photo"
            android:textColor="@color/black"
            android:textSize="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_title"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/priceLocLay"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toBottomOf="@id/photoLay"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/priceLocLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/editDescription"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintVertical_weight="1">

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/text_price"
            android:inputType="number"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/location"
            android:hint="@string/text_location"
            android:textSize="18dp"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_description"
        android:minHeight="48dp"
        android:inputType="text"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/inventoryWeightLay"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toBottomOf="@id/priceLocLay"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventoryWeightLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        app:layout_constraintVertical_weight="1">

        <EditText
            android:id="@+id/editInventory"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint="@string/text_inventory"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/text_weight"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>